test_1494161044/logfull.txt
> Testing hash type 670 with attack mode 0, markov enabled, single hash, device-type Gpu, vector-width 1.
[ len 1 ] $Chacha20$*0*0000000000000000*4141414141414141*9eef4dd6f48f2245:7
[ len 2 ] $Chacha20$*0*0000000000000000*4141414141414141*be7a38e6500a509b:84
[ len 3 ] $Chacha20$*0*0000000000000000*4141414141414141*fa6baaba0c4420d3:106
[ len 4 ] $Chacha20$*0*0000000000000000*4141414141414141*485edfbad5bc5ea4:6830
[ len 5 ] $Chacha20$*0*0000000000000000*4141414141414141*8f2db3ba0aa6cb3d:67327
[ len 6 ] $Chacha20$*0*0000000000000000*4141414141414141*7fee80345d76c49f:172876
[ len 7 ] $Chacha20$*0*0000000000000000*4141414141414141*2352b45a2fc3267f:5262160
[ len 8 ] $Chacha20$*0*0000000000000000*4141414141414141*1d74e5be848dbb13:51154122
[ len 9 ] $Chacha20$*0*0000000000000000*4141414141414141*b623c8ef510608f5:688146277
[ len 10 ] $Chacha20$*0*0000000000000000*4141414141414141*4548f3228c550841:2567034226
[ len 11 ] $Chacha20$*0*0000000000000000*4141414141414141*f0f0f8a2c5e15723:65243584027
[ len 12 ] $Chacha20$*0*0000000000000000*4141414141414141*9ff57ee82baa57cf:758323623131
[ len 13 ] $Chacha20$*0*0000000000000000*4141414141414141*b22c5482f5e0c02a:5344242408221
[ len 14 ] $Chacha20$*0*0000000000000000*4141414141414141*53d673141a4d73bf:11500885212122
[ len 15 ] $Chacha20$*0*0000000000000000*4141414141414141*aae5c2712eb3d658:773251056470147
[ len 16 ] $Chacha20$*0*0000000000000000*4141414141414141*6c9fb32be4d9fb68:1242435333842100
[ len 17 ] $Chacha20$*0*0000000000000000*4141414141414141*1b9562867e00de26:04536860562122455
[ len 18 ] $Chacha20$*0*0000000000000000*4141414141414141*567b622750358d2d:424078034767428433
[ len 19 ] $Chacha20$*0*0000000000000000*4141414141414141*4a5930c74321338b:0758628687420556855
[ len 20 ] $Chacha20$*0*0000000000000000*4141414141414141*8408a78908d0e73d:11712130286210078153
[ len 21 ] $Chacha20$*0*0000000000000000*4141414141414141*4b586e8afe679002:848757602308418388545
[ len 22 ] $Chacha20$*0*0000000000000000*4141414141414141*ddb3aa642641af04:4104601217275625710304
[ len 23 ] $Chacha20$*0*0000000000000000*4141414141414141*bdcb02a791245956:34430335111681721706340
[ len 24 ] $Chacha20$*0*0000000000000000*4141414141414141*260541d757e1ee7f:664067016802416374532812
[ len 25 ] $Chacha20$*0*0000000000000000*4141414141414141*dedde01bccf7013a:4246452363277564263034680
[ len 26 ] $Chacha20$*0*0000000000000000*4141414141414141*531de00a0c78ce8f:80200772152780105720487012
[ len 27 ] $Chacha20$*0*0000000000000000*4141414141414141*74a93c81b774077e:068210785414413502464724060
[ len 28 ] $Chacha20$*0*0000000000000000*4141414141414141*cc3db0df2f82199d:8687450087866772507633821865
[ len 29 ] $Chacha20$*0*0000000000000000*4141414141414141*99c3e7f4a0a6b559:32865338561878287774738132833
[ len 30 ] $Chacha20$*0*0000000000000000*4141414141414141*97ab2fdfbb4a2633:666783020401604077431358336216
[ len 31 ] $Chacha20$*0*0000000000000000*4141414141414141*25c151d5e72c737a:7866263218255472007483734370546
> Testing hash type 670 with attack mode 0, markov enabled, single hash, device-type Gpu, vector-width 4.
[ len 1 ] [31mclBuildProgram(): CL_BUILD_PROGRAM_FAILURE[0m

[31m* Device #1: Kernel /home/mlemay/dev/hashcat/OpenCL/m00670_a0.cl build failed - proceeding without this device.[0m

<kernel>:57:3: error: statement requires expression of scalar type ('int __attribute__((ext_vector_type(4)))' invalid)
  do {
  ^
! unhandled return code 255, cmdline : echo -n 7 | ./hashcat --quiet --force --potfile-disable --runtime 400 --gpu-temp-disable --weak-hash-threshold=0 --opencl-device-types 2 --opencl-vector-width 4 -a 0 -m 670 '$Chacha20$*0*0000000000000000*4141414141414141*9eef4dd6f48f2245'
[ len 2 ] [31mclBuildProgram(): CL_BUILD_PROGRAM_FAILURE[0m

[31m* Device #1: Kernel /home/mlemay/dev/hashcat/OpenCL/m00670_a0.cl build failed - proceeding without this device.[0m

<kernel>:57:3: error: statement requires expression of scalar type ('int __attribute__((ext_vector_type(4)))' invalid)
  do {
  ^
! unhandled return code 255, cmdline : echo -n 84 | ./hashcat --quiet --force --potfile-disable --runtime 400 --gpu-temp-disable --weak-hash-threshold=0 --opencl-device-types 2 --opencl-vector-width 4 -a 0 -m 670 '$Chacha20$*0*0000000000000000*4141414141414141*be7a38e6500a509b'
[ len 3 ] [31mclBuildProgram(): CL_BUILD_PROGRAM_FAILURE[0m

[31m* Device #1: Kernel /home/mlemay/dev/hashcat/OpenCL/m00670_a0.cl build failed - proceeding without this device.[0m

<kernel>:57:3: error: statement requires expression of scalar type ('int __attribute__((ext_vector_type(4)))' invalid)
  do {
  ^
! unhandled return code 255, cmdline : echo -n 106 | ./hashcat --quiet --force --potfile-disable --runtime 400 --gpu-temp-disable --weak-hash-threshold=0 --opencl-device-types 2 --opencl-vector-width 4 -a 0 -m 670 '$Chacha20$*0*0000000000000000*4141414141414141*fa6baaba0c4420d3'
[ len 4 ] [31mclBuildProgram(): CL_BUILD_PROGRAM_FAILURE[0m

[31m* Device #1: Kernel /home/mlemay/dev/hashcat/OpenCL/m00670_a0.cl build failed - proceeding without this device.[0m

<kernel>:57:3: error: statement requires expression of scalar type ('int __attribute__((ext_vector_type(4)))' invalid)
  do {
  ^
! unhandled return code 255, cmdline : echo -n 6830 | ./hashcat --quiet --force --potfile-disable --runtime 400 --gpu-temp-disable --weak-hash-threshold=0 --opencl-device-types 2 --opencl-vector-width 4 -a 0 -m 670 '$Chacha20$*0*0000000000000000*4141414141414141*485edfbad5bc5ea4'
[ len 5 ] [31mclBuildProgram(): CL_BUILD_PROGRAM_FAILURE[0m

[31m* Device #1: Kernel /home/mlemay/dev/hashcat/OpenCL/m00670_a0.cl build failed - proceeding without this device.[0m

<kernel>:57:3: error: statement requires expression of scalar type ('int __attribute__((ext_vector_type(4)))' invalid)
  do {
  ^
! unhandled return code 255, cmdline : echo -n 67327 | ./hashcat --quiet --force --potfile-disable --runtime 400 --gpu-temp-disable --weak-hash-threshold=0 --opencl-device-types 2 --opencl-vector-width 4 -a 0 -m 670 '$Chacha20$*0*0000000000000000*4141414141414141*8f2db3ba0aa6cb3d'
[ len 6 ] 